// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cw08yvc soui-tag-tag c-281hts soui-tag-info c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="cw08yvc soui-tag-tag c-8arnuz soui-tag-danger c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="cw08yvc soui-tag-tag clo1ksq soui-tag-warning c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="cw08yvc soui-tag-tag c-rt34sv soui-tag-success c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag c-wnovj9 soui-tag-tangerine c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag cgs3gyf soui-tag-magenta c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2b5khe soui-tag-purple c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-5qkkik soui-tag-indigo c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2853pn soui-tag-cyan c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-27yhco soui-tag-neon c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25bhi9 soui-tag-lemon c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c201w2s soui-tag-brown c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag c-wnovj9 soui-tag-tangerine c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag cgs3gyf soui-tag-magenta c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2b5khe soui-tag-purple c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-5qkkik soui-tag-indigo c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2853pn soui-tag-cyan c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-27yhco soui-tag-neon c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25bhi9 soui-tag-lemon c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c201w2s soui-tag-brown c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag c-wnovj9 soui-tag-tangerine c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag cgs3gyf soui-tag-magenta c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2b5khe soui-tag-purple c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-5qkkik soui-tag-indigo c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2853pn soui-tag-cyan c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-27yhco soui-tag-neon c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25bhi9 soui-tag-lemon c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c201w2s soui-tag-brown c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag c-wnovj9 soui-tag-tangerine cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag cgs3gyf soui-tag-magenta cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2b5khe soui-tag-purple cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-5qkkik soui-tag-indigo cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-2853pn soui-tag-cyan cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-27yhco soui-tag-neon cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25bhi9 soui-tag-lemon cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c201w2s soui-tag-brown cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-281hts soui-tag-info c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-8arnuz soui-tag-danger c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag clo1ksq soui-tag-warning c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-rt34sv soui-tag-success c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-281hts soui-tag-info c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-8arnuz soui-tag-danger c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag clo1ksq soui-tag-warning c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-rt34sv soui-tag-success c-283icr soui-tag-fill"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-281hts soui-tag-info c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-8arnuz soui-tag-danger c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag clo1ksq soui-tag-warning c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-rt34sv soui-tag-success c-f81vww soui-tag-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-281hts soui-tag-info cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-8arnuz soui-tag-danger cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag clo1ksq soui-tag-warning cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c-rt34sv soui-tag-success cbpfjh2 soui-tag-bright-outline"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag c29awl1 soui-tag-small csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25912h soui-tag-large csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="cw08yvc soui-tag-tag c29awl1 soui-tag-small csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cw08yvc soui-tag-tag c25912h soui-tag-large csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright cso3sr2 soui-tag-disabled"
    >
      <div
        class="ctgi2dd soui-tag-wrapper"
      >
        <span
          class="cwqtqen soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="cvk1jwf soui-tag-close-icon"
      >
        <span
          class="c-cai9nw soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-f81vww soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="ctgi2dd soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
  >
    <div
      class="ctgi2dd soui-tag-wrapper"
    >
      <span
        class="cwqtqen soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="cvk1jwf soui-tag-close-icon"
    >
      <span
        class="c-cai9nw soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="cw08yvc soui-tag-tag csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cw08yvc soui-tag-tag cpzg717 soui-tag-rounded csmbay7 soui-tag-default c-8zllf8 soui-tag-bright"
  >
    <span
      class="ctgi2dd soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
